--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-# requirements.txt
 fastapi==0.110.2
 uvicorn[standard]==0.29.0
 httpx==0.27.0
-openai>=1.14
+openai==0.28.1      # pin pre-1.0 client
